--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
+body {
+    background-color: #272351;
+    color: #fff;
+}
+
 h1 {
     text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 55px;
+    font-weight: 900;
+    color: #73B966;
+    text-shadow: 3px -2px #E74148;
 }
 
 section {
@@ -7,7 +17,37 @@ section {
     flex-direction: column;
 }
 
+.starter-text {
+    display: flex;
+    align-items: center;
+    width: 510px;
+    height: 360px;
+    margin: auto;
+    background-color: #F1EBD3;
+    border: 20px solid #2DAAA2;
+}
+
+p {
+    font-family: 'Courier New', Courier, monospace;
+    color: #352459;
+    padding: 0 40px;
+}
+
+.start-btn {
+    color: white;
+    width: 200px;
+    height: 40px;
+    margin: auto;
+    margin-top: 30px;
+    background-color: #E74148;
+    border: none;
+}
+
 canvas {
     margin: auto;
     background-color: #070334;
+}
+
+.hide {
+    display: none;
 }
